--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.cloud.shopping</groupId>
@@ -15,12 +15,13 @@
 
   <modules>
      <module>shopping-eureka</module>
+    <module>shopping-discovery</module>
   </modules>
 
   <developers>
     <developer>
       <name>蔡斌</name>
-      <url></url>
+      <url/>
       <email>2623604881@qq.com</email>
     </developer>
   </developers>
