增加监控中心

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <modules>
      <module>shopping-eureka</module>
     <module>shopping-discovery</module>
+    <module>shopping-monitor</module>
   </modules>
 
   <developers>
